introduced 4 levels of verbosity cache jar error in JarInfo added forceUpdate parameter to force update JarInfo